--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Bark
+application.vendor=wkowa
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Bark.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.ojdbc6.jar=C:\\Users\\coolm\\OneDrive\\School\\COB\\CIS 331\\DatabaseExample\\DatabaseExample\\ojdbc6.jar
+file.reference.ojdbc6.jar-1=C:\\Users\\wkowa\\OneDrive\\Documents\\NetBeansProjects\\CIS 484\\ojdbc6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.ojdbc6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
